--- a/Portfolio-Twitter/index.html
+++ b/Portfolio-Twitter/index.html
@@ -15,6 +15,10 @@
     .img-fluid{
       max-height: 50%;
     }
+    #per1{
+      max-height: 100%;
+      max-width: 100%;
+    }
   </style>
 </head>
 
@@ -24,14 +28,14 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-md my-4 py-4">
+      <div class="col-md-7 my-4 py-4">
         <p class=".display-1 p-4 my-4"></p>
         <h1>Hi,I'm <span class="text-primary">Ehtesham</span></h1>
         <h1>Web Developer</h1>
         <button type="button" class="btn btn-primary my-4">Hire Me</button>
         <p class=".display-1 p-4 my-4"></p>
       </div>
-      <div class="col-md">
+      <div class="col-md-5">
         <p class=".display-1 p-4 my-4"></p>
         <img src="header-1.png" class="img-fluid" alt="website-design">
       </div>
@@ -48,10 +52,10 @@
   <div class="container my-4 nav justify-content-center">
     <h1 class="text-primary">About</h1>
     <div class="row">
-      <div class="col-md my-4 py-4">
+      <div class="col-md-4 my-4 py-4">
         <img src="Ehteshm.jpg" class="img-fluid" alt="website-design">
       </div>
-      <div class="col-md">
+      <div class="col-md-8">
         <p class=".display-1 p-4 my-4"></p>
         <p class=".display-1 p-4 my-4">I daily make new projects. I learned and practiced by making different type of sites,
           different styles of login forms. Working hard is very much a part of my personal identity. I would utilize all
@@ -66,7 +70,7 @@
   <div class="container">
     <h1 class="text-primary my-4 nav justify-content-center">My Skills</h1>
     <div class="row">
-      <div class="col-md my-4 py-4 bg-light">
+      <div class="col-md-6 my-4 py-4 bg-light">
         <h1>Html</h1>
         <div class="progress my-2">
           <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
@@ -88,8 +92,8 @@
             aria-valuemax="100">70%</div>
         </div>
       </div>
-      <div class="col-md ">
-        <img src="per-1.png" class="img-fluid" alt="website-design">
+      <div class="col-md-6 ">
+        <img src="per-1.png" class="img-fluid" id="per1" alt="website-design">
       </div>
     </div>
   </div>
